--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseurl: https://irisicy4.github.io/
+baseurl: https://irisicy4.github.io/awesome-mmdataset-website/
 languageCode: en-us
 theme: hugo-theme-stack
 title: Bingyang (Icy) Wang
